<resources>
    <string name="app_name">Testing2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="large_text">LARGE TEXT</string>
    <string name="main_menu">Main Menu</string>
    <string name="save_information">Save Information</string>
    <string name="textview">TextView</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_e_mail">Welcome E-Mail!</string>
    <string name="title_activity_maps">Map</string>
</resources>
