<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    tools:context="com.example.sam.testing2.profileActivity">

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/large_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textViewUserEmail"
        android:background="#BBDEFB"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_address"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextName"
        android:background="#BBDEFB"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_city"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editTextAddress"
        android:background="#BBDEFB"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_state"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextCity"
        android:background="#BBDEFB"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/main_menu"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/mainMenu"
        android:layout_marginTop="39dp"
        android:background="#2196F3"
        android:layout_alignTop="@+id/safeInfo"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/save_information"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/safeInfo"
        android:background="#BBDEFB"
        android:layout_marginBottom="107dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
